@@ -8,7 +8,7 @@
 
 defined('_JEXEC') or die;
 
-$url = clone(JURI::getInstance());
+$url = clone JURI::getInstance();
 $showRightColumn = $this->countModules('user1 or user2 or right or top');
 $showRightColumn &= JRequest::getCmd('layout') != 'form';
 $showRightColumn &= JRequest::getCmd('task') != 'edit'
